popup showing behind the screen fixed

--- a/EditableTable/styles/DatasetStyles.css
+++ b/EditableTable/styles/DatasetStyles.css
@@ -87,3 +87,7 @@
 .errorDiv[title] {
   border-color: rgba(248, 58, 58, 0.326);
 }
+
+div[id^="DialogContainer__"][id$='_popupContainer_innerPopup'] {
+  z-index: 10;
+}
